--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glowing plant</title>
+   <link rel="icon" href="{{ url_for('static', filename='logo.png') }}" type="image/png">
+    
+    <!-- Optional: Add other sizes for better device support -->
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='logo.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='logo.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='logo.png') }}">
+    
     <link rel="style.css" href="">
 </head>
   
