--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing plant</title>
+    <title>Flowers for you</title>
    <link rel="icon" href="{{ url_for('static', filename='logo.png') }}" type="image/png">
-    
+        <meta name="description" content="Flower for you is a beautiful website of flower animation.">
+
     <!-- Optional: Add other sizes for better device support -->
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='logo.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='logo.png') }}">
